--- a/w10d1_lab/index.html
+++ b/w10d1_lab/index.html
@@ -62,7 +62,7 @@
       <!-- Edit Product Section -->
       <section class="page" id="product-edit">
         <div class="ui header">Edit Product</div>
-        <form class="ui form" id="new-product-form">
+        <form class="ui form" id="edit-product-form">
           <div class="field">
               <label for="title">Title</label>
               <input type="text" name="title" id="title" placeholder="Register your awesome product today!" />
